<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/layout_add_meeting">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:background="@drawable/bg_stroke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userIdLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_id_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:hint="@string/user_id"
                    android:background="@drawable/bg_stroke"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black_80"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/roomIdLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/room_id_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:hint="@string/room_id"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/bg_stroke"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/clientNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/client_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:hint="@string/client_name"
                    android:background="@drawable/bg_stroke"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black_80"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/companyNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/company_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    tools:ignore="HardcodedText"
                    android:gravity="start"
                    android:hint="@string/company_name"
                    android:background="@drawable/bg_stroke"
                    android:backgroundTint="@color/white"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="text|textMultiLine"
                    android:textColor="@color/black_80"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    tools:ignore="HardcodedText"
                    android:gravity="start"
                    android:hint="@string/date"
                    android:background="@drawable/bg_stroke"
                    android:backgroundTint="@color/white"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="text|textMultiLine"
                    android:textColor="@color/black_80"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/startTimeLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/start_time_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    tools:ignore="HardcodedText"
                    android:gravity="start"
                    android:hint="@string/start_time"
                    android:background="@drawable/bg_stroke"
                    android:backgroundTint="@color/white"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="text|textMultiLine"
                    android:textColor="@color/black_80"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/endTimeLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/end_time_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    tools:ignore="HardcodedText"
                    android:gravity="start"
                    android:hint="@string/end_time"
                    android:background="@drawable/bg_stroke"
                    android:backgroundTint="@color/white"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="text|textMultiLine"
                    android:textColor="@color/black_80"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_input"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:imeOptions="actionNext"
                    tools:ignore="HardcodedText"
                    android:gravity="start"
                    android:hint="@string/description"
                    android:background="@drawable/bg_stroke"
                    android:backgroundTint="@color/white"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="text|textMultiLine"
                    android:textColor="@color/black_80"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_feedback_Btn"
                android:layout_width="180dp"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/cod_bg_six"
                android:text="@string/btn_add_meeting"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar_submit_feedback"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone"
            android:layout_marginBottom="250dp"
            style="?android:attr/progressBarStyleLarge"
            android:indeterminate="true"
            android:indeterminateTint="@color/teal_200"
            android:progressTint="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>